# ftxui_template_test

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.cpp
